헤더 review 링크 수정
Signed-off-by: USER <hjjj1324@gmail.com>

--- a/project/src/main/resources/templates/header.html
+++ b/project/src/main/resources/templates/header.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="col">
                         <a style="text-decoration: none; color: inherit;"
-                           th:href="@{/review/list}">리뷰</a>
+                           th:href="@{/review}">리뷰</a>
                     </div>
                     <div class="col">
                         <a style="text-decoration: none; color: inherit;"
