--- a/project/src/main/resources/templates/header.html
+++ b/project/src/main/resources/templates/header.html
@@ -10,7 +10,7 @@
     <header class="text-center"
             style="background-color: #3F51B5; color: #FFFFFF;">
         <div class="p-5 container">
-            <a th:href="@{/}"/><img src="/images/logo.png" style="width:190px; height:150px;"> </a>
+            <a th:href="@{/}"/><img src="/resources/images/logo.png" style="width:190px; height:150px;"> </a>
         </div>
         <div style="background-color: #3A4BA7; color: #FFFFFF; font-size: 20px">
             <div class="container p-3">
@@ -39,10 +39,19 @@
                         <a style="text-decoration: none; color: inherit;"
                            th:href="@{/user/mypage}">마이페이지</a>
                     </div>
-                    <div class="col">
+                    <div class="col" th:if="${userId != null}">
                         <a style="text-decoration: none; color: inherit;" onclick="return confirm('로그아웃하시겠습니까?')"
                            th:href="@{/user/logout}">로그아웃</a>
                     </div>
+                    <div class="col" th:if="${userId == null}">
+                        <a style="text-decoration: none; color: inherit;"
+                           th:href="@{/user/login/form}">로그인</a>
+                    </div>
+                    <div class="col" th:if="${userId == null}">
+                        <a style="text-decoration: none; color: inherit;"
+                           th:href="@{/user/create/form}">회원가입</a>
+                    </div>
+
                 </div>
             </div>
         </div>
