--- a/project/src/main/resources/templates/user/create.html
+++ b/project/src/main/resources/templates/user/create.html
@@ -9,7 +9,7 @@
 
     <script>
         function userCreate() {
-            if (form.userId.value == "") {
+            if (form.id.value == "") {
                 alert("사용자 ID를 입력하십시오.");
                 form.userId.focus();
                 return false;
@@ -39,14 +39,14 @@
 </head>
 <body>
 <div class="container">
-
-    <!-- 회원가입이 실패한 경우 exception 객체에 저장된 오류 메시지를 출력 -->
-    <div class="row col-lg-12">
-            <h6 class="text-danger" th:if="${registerFailed}" th:text="${exception.getMessage()}" />
-    </div>
-
     <!-- registration form  -->
     <section class="container mt-3" style="max-width: 560px;">
+
+        <!-- 회원가입이 실패한 경우 exception 객체에 저장된 오류 메시지를 출력 -->
+        <div class="row col-lg-12">
+            <h6 class="text-danger" th:if="${registerFailed}" th:text="${exception}" />
+        </div>
+
         <form action="#" name="form" method="POST" th:action="@{/user/create}">
             <div class="form-group" id="userType">
                 <label for="userType" ></label>
@@ -102,7 +102,7 @@
             </div>
             <br>
             <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="가입" >
+                <input onclick="userCreate()" type="button" class="btn btn-primary" value="가입"  >
 <!--                onclick="userCreate();"-->
                 <input class="btn btn-light" type="reset" value="초기화">
             </div>
