--- a/project/src/main/resources/templates/user/create.html
+++ b/project/src/main/resources/templates/user/create.html
@@ -43,7 +43,7 @@
 
         <!-- 회원가입이 실패한 경우 exception 객체에 저장된 오류 메시지를 출력 -->
         <div class="row col-lg-12">
-            <h6 class="text-danger" th:if="${registerFailed}" th:text="${exception}" />
+            <h6 class="text-danger" th:if="${exception}" th:text="${massage}" />
         </div>
 
         <form action="#" name="form" method="POST" th:action="@{/user/create}">
