--- a/project/src/main/resources/templates/user/login.html
+++ b/project/src/main/resources/templates/user/login.html
@@ -9,7 +9,7 @@
 
     <script>
         function login() {
-            if (form.userId.value == "") {
+            if (form.id.value == "") {
                 alert("사용자 ID를 입력하십시오.");
                 form.userId.focus();
                 return false;
@@ -27,12 +27,12 @@
 <div th:insert="~{header :: header}"></div>
 <section class="container mt-3" style="max-width: 560px;">
     <div class="col-lg-12" style="text-align: center">
-        <h6 class="text-danger" th:if="${loginFailed}" th:text="${exception.getMessage()}"/>
+        <h6 class="text-danger" th:if="${exception}" th:text="${message}"/>
     </div>
     <form name="form" method="POST" th:action="@{/user/login}">
-        <div class="form-group" id="userId">
-            <label for="userId">아이디</label>
-            <input type="text" name="userId" class="form-control" placeholder="아이디">
+        <div class="form-group" id="id">
+            <label for="id">아이디</label>
+            <input type="text" name="id" class="form-control" placeholder="아이디">
         </div>
         <div class="form-group" id="password">
             <label for="password">비밀번호</label>
