--- a/project/src/main/resources/templates/user/create.html
+++ b/project/src/main/resources/templates/user/create.html
@@ -40,10 +40,8 @@
 <body>
 <div class="container">
     <section class="container mt-3" style="max-width: 560px;">
-
-        <!-- 회원가입이 실패한 경우 exception 객체에 저장된 오류 메시지를 출력 -->
         <div class="row col-lg-12">
-            <h6 class="text-danger" th:if="${exception}" th:text="${massage}" />
+            <h6 class="text-danger" th:if="${exception}" th:text="${message}" />
         </div>
 
         <form action="#" name="form" method="POST" th:action="@{/user/create}">
