--- a/project/src/main/resources/templates/workout/workoutList.html
+++ b/project/src/main/resources/templates/workout/workoutList.html
@@ -39,9 +39,9 @@
         </select>
 
         <select name="workoutType" class="form-control mx-1 mt-2">
-            <option value="">종목</option>
+            <option value="">운동 종류</option>
+            <option th:value="수영" th:selected="${workoutType eq '수영'}">수영</option>
             <option th:value="헬스" th:selected="${workoutType eq '헬스'}">헬스</option>
-            <option th:value="요가" th:selected="${workoutType eq '요가'}">요가</option>
             <option th:value="필라테스" th:selected="${workoutType eq '필라테스'}">필라테스</option>
             <option th:value="PT" th:selected="${workoutType eq 'PT'}">PT</option>
         </select>
@@ -49,26 +49,25 @@
         <button type="submit" class="btn btn-primary mx-1 mt-2">검색</button>
     </form>
 
-    <div class="col-lg-12 text-center text-danger" th:if="${#lists.isEmpty(exerciseList)}">
+    <div class="col-lg-12 text-center text-danger" th:if="${#lists.isEmpty(workoutList)}">
         <br>검색 결과가 없습니다.
     </div>
 
-    <div th:each="exercise : ${exerciseList}" class="card bg-light mt-3">
+    <div th:each="workout : ${workoutList}" class="card bg-light mt-3">
         <div class="card-header bg-light">
             <div class="col-10 text-left">
-                <h5 th:text="${exercise.exerciseName}"></h5>
+                <h5 th:text="${workout.workoutName}"></h5>
             </div>
         </div>
         <div class="card-body">
-            <span class="col-10 text-left" th:text="'담당 강사 : ' + ${exercise.trainerName}"></span>
-            <span class="col-10 text-left" th:text="${exercise.exerciseDay + '요일'}"></span>
-            <span class="col-10 text-left" th:text="'시작 시간 : ' + ${exercise.exerciseTime + ' 시'}"></span>
-            <span class="col-10 text-left" th:text="'운동 종류 : ' + ${exercise.exerciseType}"></span>
+            <span class="col-10 text-left" th:text="'운동 종류 : ' + ${workout.workoutType}"></span>
             <span class="col-10 text-left" style="color: green;"
-                  th:text="'( 난이도 : ' + ${exercise.difficulty} + ' )'"></span>
+                  th:text="'( 난이도 : ' + ${workout.workoutDifficulty} + ' )'"></span>
+            <span class="col-10 text-left" th:text="'담당 강사 : ' + ${workout.trainerName}"></span>
+
             <span class="col-10">
                 <a onclick="return confirm('등록하시겠습니까?')" class="btn btn-primary"
-                   th:href="@{/exercise/reservation(exerciseId=${exercise.exerciseId})}">
+                   th:href="@{/workout/reservation(workoutId=${workout.workoutId})}">
                     등록하기
                 </a>
             </span>
