--- a/project/src/main/resources/templates/header.html
+++ b/project/src/main/resources/templates/header.html
@@ -21,15 +21,15 @@
                     </div>
                     <div class="col" th:if="${session.userType == 'trainer' }">
                         <a style="text-decoration: none; color: inherit;"
-                           th:href="@{/trainer/exercise/form}">운동 예약</a>
+                           th:href="@{/workout/list}">운동 등록</a>
                     </div>
                     <div class="col" th:if="${userType == 'user' }">
                         <a style="text-decoration: none; color: inherit;"
-                           th:href="@{/exercise/list}">운동 예약</a>
+                           th:href="@{/workout/list}">운동 예약</a>
                     </div>
                     <div class="col">
                         <a style="text-decoration: none; color: inherit;"
-                           th:href="@{/exercise/timetable}">내 시간표</a>
+                           th:href="@{/workout/list}">운동 리스트</a>
                     </div>
                     <div class="col">
                         <a style="text-decoration: none; color: inherit;"
