--- a/project/src/main/resources/templates/workout/addWorkoutForm.html
+++ b/project/src/main/resources/templates/workout/addWorkoutForm.html
@@ -55,9 +55,9 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="workoutType" class="col-lg-2 col-form-label">운동 이름</label>
+            <label for="workoutName" class="col-lg-2 col-form-label">운동 이름</label>
             <div class="col-lg-10">
-                <input type="text" class="form-control" id="workoutType" name="workoutType" required>
+                <input type="text" class="form-control" id="workoutName" name="workoutName" required>
             </div>
         </div>
         <div class="form-group row">
