운동 리스트에서 select로 검색하기 기능했음

--- a/project/src/main/resources/templates/workout/addWorkoutForm.html
+++ b/project/src/main/resources/templates/workout/addWorkoutForm.html
@@ -41,8 +41,8 @@
                     <label class="form-check-label" for="inlineRadios1">헬스</label>
                 </div>
                 <div class="col-sm-4">
-                    <input class="form-check-input" type="radio" name="workoutType" id="inlineRadios2" value="요가" checked>
-                    <label class="form-check-label" for="inlineRadios2">요가</label>
+                    <input class="form-check-input" type="radio" name="workoutType" id="inlineRadios2" value="필라테스" checked>
+                    <label class="form-check-label" for="inlineRadios2">필라테스</label>
                 </div>
                 <div class="col-sm-4">
                     <input class="form-check-input" type="radio" name="workoutType" id="inlineRadios3" value="수영" checked>
