--- a/project/src/main/resources/templates/workout/workoutError.html
+++ b/project/src/main/resources/templates/workout/workoutError.html
@@ -14,7 +14,8 @@
 <body>
 <div th:insert="~{header :: header}"></div>
 
-현재 등록된 운동이 없습니다. 운동을 등록해주세요
+현재 등록된 운동이 없습니다. 운동을 등록해주세요<br>
+<button class="btn btn-primary mx-1 mt-2" onclick="window.location.href='/workout/add'">운동 등록</button>
 <div th:insert="~{footer :: footer}"></div>
 </body>
 </html>
