운동 리스트에서 강사이름 뜨게 했음

--- a/project/src/main/resources/templates/workout/workoutList.html
+++ b/project/src/main/resources/templates/workout/workoutList.html
@@ -76,7 +76,7 @@
             <span class="col-10">
                 <a onclick="return confirm('등록하시겠습니까?')" class="btn btn-primary"
                    th:href="@{/workout/reservation(workoutId=${workout.workoutId})}">
-                    등록하기
+                    신청하기
                 </a>
             </span>
         </div>
