--- a/project/src/main/resources/templates/admin/adminPage.html
+++ b/project/src/main/resources/templates/admin/adminPage.html
@@ -10,7 +10,7 @@
 <body>
 <section style="text-align:center">
     <a th:href="@{/admin/userlist}"> 사용자 목록 </a> <br>
-    <a th:href="@{/admin/reportlist}"> 신고 처리 </a> <br>
+    <a th:href="@{/admin/report}"> 신고 처리 </a> <br>
 </section>
 </body>
 <div th:insert="~{footer :: footer}"></div>
