--- a/project/src/main/resources/templates/review/reviewPage.html
+++ b/project/src/main/resources/templates/review/reviewPage.html
@@ -22,7 +22,7 @@
     <form method="get" th:action="@{/review/search}" class="form-inline mt-3">
         <select name="workoutType" class="form-control mx-1 mt-2">
             <option value="전체">전체</option>
-            <option th:each="w : ${wList}" th:selected="${w.getWorkoutId() eq session.workoutType}"
+            <option th:each="w : ${session.wList}" th:selected="${w.getWorkoutId() eq session.workoutType}"
                     th:value="${w.getWorkoutId()}" th:text="${w.toString()}"/>
         </select>
         <select name="orderType" class="form-control mx-1 mt-2">
@@ -34,12 +34,12 @@
         <button type="submit" class="btn btn-primary mx-1 mt-2">검색</button>
         <a class="btn btn-primary mx-1 mt-2" data-toggle="modal" href="#registerModal">등록하기</a>
     </form>
-    <div class="col-lg-12 text-center text-danger" th:if="${reviewList.size() eq 0}">
+    <div class="col-lg-12 text-center text-danger" th:if="${session.reviewList.size() == 0}">
         <br>
         검색 결과가 없습니다.
     </div>
 
-    <div class="card bg-light mt-3" th:each="review : ${reviewList}">
+    <div class="card bg-light mt-3" th:each="review : ${session.reviewList}">
         <div class="card-header bg-light">
             <div class="row">
                 <div class="col-8 text-left">
@@ -67,10 +67,10 @@
             <div class="row" style="margin: 0; width: 100%; float: right;">
 
                 <div class="col-9 text-left">
-							<span style="color: green;"
-                                  th:text="'( 추천수 : ' + ${review.getLikeCount()} + ' )'"> &nbsp; <a
-                                    th:href="@{/review/{reviewId}/${review.getId()}}">추천&nbsp;</a>
-							</span>
+					<span>
+                        <span style="color: green;" th:text="'( 추천수 : ' + ${review.getLikeCount()} + ' )'"/> &nbsp; <a
+                            th:href="@{/review/{id}/like(id=${review.getId()})}" th:text="추천"/>
+                    </span>
                 </div>
 
                 <div class="col-3 text-right">
@@ -107,7 +107,7 @@
                         <div class="form-group col-sm-6">
                             <label>운동 선택</label>
                             <select id="workoutId" name="workoutId" class="form-control">
-                                <option th:each="w : ${wList}"
+                                <option th:each="w : ${session.wList}"
                                         th:text="${w.getWorkoutName() + '-' + w.getTrainerName()}"
                                         th:value="${w.getWorkoutId()}"/>
                             </select>
@@ -212,4 +212,7 @@
 </div>
 <div th:insert="~{footer :: footer}"></div>
 </body>
+<script type="text/javascript" th:inline="javascript" th:if="${exception != null}">
+    confirm([[${exception}]])
+</script>
 </html>
