--- a/project/src/main/resources/templates/header.html
+++ b/project/src/main/resources/templates/header.html
@@ -10,7 +10,7 @@
     <header class="text-center"
             style="background-color: #3F51B5; color: #FFFFFF;">
         <div class="p-5 container">
-            <a th:href="@{/}"/><img src="/resources/images/logo.png" style="width:190px; height:150px;"> </a>
+            <a th:href="@{/}"/><img src="/images/logo.png" style="width:190px; height:150px;" /> </a>
         </div>
         <div style="background-color: #3A4BA7; color: #FFFFFF; font-size: 20px">
             <div class="container p-3">
