--- a/project/src/main/resources/templates/admin/userlist.html
+++ b/project/src/main/resources/templates/admin/userlist.html
@@ -28,7 +28,7 @@
         </tbody>
     </table>
     <br>
-    <a th:href="@{/user/create/form}" class="btn btn-primary">사용자 추가 </a>
+    <a th:href="@{/user/create}" class="btn btn-primary">사용자 추가 </a>
 </div>
 </body>
 </html>
