--- a/project/src/main/resources/templates/review/reviewPage.html
+++ b/project/src/main/resources/templates/review/reviewPage.html
@@ -19,7 +19,7 @@
 <section class="container">
 
     <!-- 리뷰 검색 폼 -->
-    <form method="get" th:action="@{/review/search}" class="form-inline mt-3">
+    <form method="get" th:action="@{/review}" class="form-inline mt-3">
         <select name="sworkoutid" class="form-control mx-1 mt-2">
             <option th:value="${null}">전체</option>
             <option th:each="w : ${session.wList}" th:selected="${w.getWorkoutId() eq session.sworkoutid}"
