--- a/project/src/main/resources/templates/review/reviewPage.html
+++ b/project/src/main/resources/templates/review/reviewPage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>리뷰</title>
@@ -20,32 +20,32 @@
 
     <!-- 리뷰 검색 폼 -->
     <form method="get" th:action="@{/review}" class="form-inline mt-3">
-        <select name="sworkoutid" class="form-control mx-1 mt-2">
+        <select name="workoutId" class="form-control mx-1 mt-2">
             <option th:value="${null}">전체</option>
-            <option th:each="w : ${session.wList}" th:selected="${w.getWorkoutId() eq session.sworkoutid}"
+            <option th:each="w : ${wList}" th:selected="${w.getWorkoutId() eq workoutId}"
                     th:value="${w.getWorkoutId()}" th:text="${w.toString()}"/>
         </select>
         <select name="orderby" class="form-control mx-1 mt-2">
             <option value="r.postedDate">최신순</option>
-            <option value="r.likeCount" th:selected="${session.orderby eq 'r.likeCount'}">추천순</option>
+            <option value="r.likeCount" th:selected="${orderby eq 'r.likeCount'}">추천순</option>
         </select>
         <input type="text" name="keyword" class="form-control mx-1 mt-2" placeholder="내용을 입력하세요"
-               th:value="${session.keyword}">
+               th:value="${keyword}">
         <button type="submit" class="btn btn-primary mx-1 mt-2">검색</button>
         <a class="btn btn-primary mx-1 mt-2" data-toggle="modal" href="#registerModal">등록하기</a>
     </form>
-    <div class="col-lg-12 text-center text-danger" th:if="${session.reviewList.size() == 0}">
+    <div class="col-lg-12 text-center text-danger" th:if="${reviewList.size() == 0}">
         <br>
         검색 결과가 없습니다.
     </div>
 
-    <div class="card bg-light mt-3" th:each="review : ${session.reviewList}">
+    <div class="card bg-light mt-3" th:each="review : ${reviewList}">
         <div class="card-header bg-light">
             <div class="row">
                 <div class="col-8 text-left">
-                    <span th:text="${review.getWorkoutName()}"/>
-                    <small th:text="${review.getTrainerName() }"/>
-                    <small th:text="${review.getPostedDate()}" style="color: grey"/>
+                    <span th:text="${review.workout.workoutName}"/>
+                    <small th:text="${review.workout.trainer.name }"/>
+                    <small th:text="${review.postedDate}" style="color: grey"/>
                 </div>
             </div>
         </div>
@@ -53,29 +53,29 @@
             <div class="card-title">
                 <div
                         style="vertical-align: middle; display: flex; align-items: center;">
-                    <h5 style="display: inline-block; margin: auto 0" th:text="${review.getTitle() }"/>
+                    <h5 style="display: inline-block; margin: auto 0" th:text="${review.title }"/>
                     <div style="display: inline-block; margin: auto 0"
                          class="wrap-star">
 
                         <div class='star-rating'>
-                            <span style="width:${review.getScore()*20 }%"></span>
+                            <span th:style="width=${review.score*20}%"></span>
                         </div>
                     </div>
                 </div>
             </div>
-            <p class="card-text" th:text="${review.getContent() }"/>
+            <p class="card-text" th:text="${review.content }"/>
             <div class="row" style="margin: 0; width: 100%; float: right;">
 
                 <div class="col-9 text-left">
 					<span>
-                        <span style="color: green;" th:text="'( 추천수 : ' + ${review.getLikeCount()} + ' )'"/> &nbsp; <a
-                            th:href="@{/review/{id}/like(id=${review.getId()})}" th:text="추천"/>
+                        <span style="color: green;" th:text="'( 추천수 : ' + ${review.likeCount} + ' )'"/> &nbsp; <a
+                            th:href="@{/review/{id}/like(id=${review.id})}" th:text="추천"/>
                     </span>
                 </div>
 
                 <div class="col-3 text-right">
                     <a data-toggle="modal" class="btn btn-warning" data-target="#reportModal"
-                       th:onclick="report([[${review.getTitle() +'(작성자: '+review.getUserId()+')' }]], [[${review.getId()}]])">신고</a>
+                       th:onclick="report([[${review.title +'(작성자: '+review.user.id+')' }]], [[${review.id}]])">신고</a>
 
                     <!-- 작성자==현재로그인유저 일 경우 삭제버튼 표시 -->
                     <a class="btn btn-danger" th:if="${session.userId eq review.getUserId()}"
@@ -150,12 +150,12 @@
 </div>
 
 <div class="modal fade" id="reportModal" tabindex="-1" role="dailog"
-     aria-labelledby="modal" aria-hidden="true">
+     aria-labelledby="modal2" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
 
-                <h5 class="modal-title" id="modal">신고 하기</h5>
+                <h5 class="modal-title" id="modal2">신고 하기</h5>
                 <button type="button" class="close" data-dismiss="modal"
                         aria-label="Close">
                     <span aria-hidden="true">&times;</span>
