--- a/project/src/main/resources/templates/header.html
+++ b/project/src/main/resources/templates/header.html
@@ -36,7 +36,8 @@
                            th:href="@{/review}">리뷰</a>
                     </div>
                     <div class="col" th:if="${session.userId != null}">
-                        <a style="text-decoration: none; color: inherit;">마이페이지</a>
+                        <a style="text-decoration: none; color: inherit;"
+                           th:href="@{/mypage}">마이페이지</a>
                     </div>
                     <div class="col" th:if="${session.userId != null}">
                         <a style="text-decoration: none; color: inherit;" onclick="return confirm('로그아웃하시겠습니까?')"
